<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity"
    >


    <TextView
        android:id="@+id/math_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="44dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/seven_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/math_TextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/seven"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/eight_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/math_TextView"
        android:layout_toEndOf="@+id/seven_Button"
        android:text="@string/eight"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/nine_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/math_TextView"
        android:layout_toEndOf="@+id/eight_Button"
        android:text="@string/nine"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/four_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/seven_Button"
        android:layout_marginStart="40dp"
        android:text="@string/four"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/five_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/eight_Button"
        android:layout_toEndOf="@+id/four_Button"
        android:text="@string/five"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/six_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/nine_Button"
        android:layout_toEndOf="@+id/five_Button"
        android:text="@string/six"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/one_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/four_Button"
        android:layout_marginStart="40dp"
        android:text="@string/one"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/two_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/five_Button"
        android:layout_toEndOf="@+id/one_Button"
        android:text="@string/two"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/three_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@id/six_Button"
        android:layout_toEndOf="@+id/two_Button"
        android:text="@string/three"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/zero_Button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@id/one_Button"
        android:layout_marginStart="40dp"
        android:text="@string/zero"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/decimal_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/three_Button"
        android:layout_toEndOf="@+id/zero_Button"
        android:text="@string/decimal"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/plus_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/math_TextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="44dp"
        android:layout_toEndOf="@id/nine_Button"
        android:text="@string/plus"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/sub_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/plus_Button"
        android:layout_toEndOf="@+id/six_Button"
        android:text="@string/subtraction"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="44dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/multi_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/sub_Button"
        android:layout_toEndOf="@+id/three_Button"
        android:text="@string/multi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="44dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/div_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/multi_Button"
        android:layout_toEndOf="@+id/decimal_Button"
        android:text="@string/division"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="44dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/enter_Button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/zero_Button"
        android:text="@string/enter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"/>

    <Button
        android:id="@+id/clear_Button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_below="@+id/decimal_Button"
        android:layout_toEndOf="@+id/enter_Button"
        android:text="@string/clear"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="44dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>